# gitpip

./: README.md  pyproject.toml  setup.py
gitpip/: __init__.py  __main__.py  _main.py  const.py
