[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gitpip"
version = "1.0.0"
authors = [
  {name="Filipi565"},
]
description = "Install packages from git repositories"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Source = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"